--- a/dotNetMenuProject/dotNetMenuProject.csproj
+++ b/dotNetMenuProject/dotNetMenuProject.csproj
@@ -8,8 +8,29 @@
 
   <ItemGroup>
     <None Remove="Views\Default\" />
+    <None Remove="Entities\" />
+    <None Remove="Context\" />
+    <None Remove="ViewComponents\" />
+    <None Remove="Views\Shared\Components\" />
+    <None Remove="Views\Shared\Components\_MenuListComponentPartial\" />
+    <None Remove="Views\Shared\Components\_ChefListComponentPartial\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Default\" />
+    <Folder Include="Entities\" />
+    <Folder Include="Context\" />
+    <Folder Include="ViewComponents\" />
+    <Folder Include="Views\Shared\Components\" />
+    <Folder Include="Views\Shared\Components\_MenuListComponentPartial\" />
+    <Folder Include="Views\Shared\Components\_ChefListComponentPartial\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.31" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.31">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.31" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.29" />
   </ItemGroup>
 </Project>
