--- a/dotNetMenuProject/dotNetMenuProject.csproj
+++ b/dotNetMenuProject/dotNetMenuProject.csproj
@@ -14,6 +14,8 @@
     <None Remove="Views\Shared\Components\" />
     <None Remove="Views\Shared\Components\_MenuListComponentPartial\" />
     <None Remove="Views\Shared\Components\_ChefListComponentPartial\" />
+    <None Remove="Views\Weather\" />
+    <None Remove="Views\Imbd\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Default\" />
@@ -23,6 +25,8 @@
     <Folder Include="Views\Shared\Components\" />
     <Folder Include="Views\Shared\Components\_MenuListComponentPartial\" />
     <Folder Include="Views\Shared\Components\_ChefListComponentPartial\" />
+    <Folder Include="Views\Weather\" />
+    <Folder Include="Views\Imbd\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.31" />
@@ -32,5 +36,6 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.31" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.29" />
+    <PackageReference Include="Newtonsoft.Json" Version="6.0.8" />
   </ItemGroup>
 </Project>
